--- a/container/TEST_CONTAINER.html
+++ b/container/TEST_CONTAINER.html
@@ -3,7 +3,7 @@
 <base target="main">
 </head>
 <body>
-<p align="center"><b>Test Run:09/28/2019   10:16:29.168 PM</b></p><font color="blue"><H2  align="center">TEST_CONTAINER</H2></font><p align="center">Note: * indicates a violation test case</p>
+<p align="center"><b>Test Run:09/29/2019   12:04:54.338 AM</b></p><font color="blue"><H2  align="center">TEST_CONTAINER</H2></font><p align="center">Note: * indicates a violation test case</p>
 <table border=1 align="center">
 <tr><td bgcolor="#00FF00" colspan="3">&nbsp;</td></tr><tr><td align="center" colspan="3">PASSED (1 out of 1)</td></tr>
 <tr><td align="center" bgcolor="#000080"><font color="#FFCC00"><b>Case Type</b></font></td>
@@ -21,7 +21,7 @@
 <tr><td bgcolor="#008080" align="center"><font color="#FFCC00"><b>Test1</b></font></td>
 <td bgcolor="#008080" align="center" colspan="2"><font color="#FFCC00">TEST_CONTAINER</font></td></tr><tr><td><font color="green"><b>PASSED</b></font></td>
 <td align="center">NONE</td>
-<td>no comment</td>
+<td>Testing the ARRAYED_CONTAINER class</td>
 </tr>
 </table></body>
 </html>
